--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,6 +30,7 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11725027.md#1">【内幕】中共如何将全球港口和商船变武器</a><br>
 <br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766515.md#1">传武汉已掌握新病毒 港府急应变拟升级防疫</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766426.md#1">习近平与林郑新年致辞有难言之隐？专家解读</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766425.md#1">山西退伍军人死于非命 遗体吊在信访局门外</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766361.md#1">港警成动荡原因 独立调查委暂无望 廉署介入</a><br>
@@ -41,11 +42,11 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766230.md#1">杭州政府要求全民储粮 被指转嫁粮食危机</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766097.md#1">朝鲜三分之二部长大换血 金与正再获新职</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766104.md#1">重庆大火1家6口殒命 曾绝望呼救50分钟</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766055.md#1">【珍言真语】吴明德：中共印钞票被走资国外</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766201.md#1">世界第三大连锁酒店“印度版Airbnb”出事</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765947.md#1">前高管炮轰谷歌中国项目：重利轻人权</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765978.md#1">北京法轮功学员 认证专家侯俊文遭迫害离世</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766183.md#1">武汉爆发神秘病毒 亚洲政府保持警觉</a><br>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766055.md#1">【珍言真语】吴明德：中共印钞票被走资国外</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763818.md#1">大陆民众得福报 敬祝李洪志大师新年好</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764556.md#1">【翻墙必看】分析：川普击碎中共的拖延术</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765329.md#1">武汉“不明原因肺炎”病例暴增至44例</a><br>
@@ -87,9 +88,8 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762158.md#1">4.7亿美元假耐克鞋入美 华人作案手法曝光</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762816.md#1">台资讯战专家：网红成中共渗透渠道</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762740.md#1">扬州大学多名学生感染肺结核 校方压制消息</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761830.md#1">【翻墙必看】专家：习面临无解难题 应改弦易辙</a><br>
 <br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413_2.md#1">更多......</a></p></td><td VALIGN=TOP rowspan=6 width="156" align="middle"><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ffbns289/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ffbns289/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ffbns289/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ffbns289/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ffbns289/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ffbns289/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ffbns289/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/17/n11728852.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/20191210-Yichun-American-Thought-Leaders-Joey-Siu-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/17/n11728852.md#1">【思想领袖】专访邵岚：需反共捍卫价值观</a><br>我们永远不能低估，中国共产党为了维 ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760936.md#1">大陆民众新年感谢法轮功 问候李大师</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761505.md#1">【拍案惊奇】元旦百万游行被腰斩 港警用航拍机</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/10/n11714048.md#1">60国海外法轮功学员恭祝李洪志师父新年好</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761249.md#1">港民新年诉求不变 坚持反暴政不会退缩</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761187.md#1">穿越非洲抵美 山东维权人士万里大逃亡（上）</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762321.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2015/03/1405201308251944-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762321.md#1">大陆2019年卖地金额创新高 16城市超千亿</a><br>最新的统计数据显示，大陆2019年卖地 ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761856.md#1">国企巨头爆雷：计提减值40亿 海工业务亏80亿</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761923.md#1">12月财新制造业PMI降至51.5 为3个月低位</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761801.md#1">大陆17家上市公司控制人被抓 殃及百万投资者</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/28/n11751710.md#1">【2019盘点】六大案 透视美中医疗领域新战场</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761112.md#1">川普：希望在第二阶段协议完成贸易谈判</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762532.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1150363167-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762532.md#1">传中共暂停“沪伦通”计划 疑因英国挺香港</a><br>“沪伦通”是上海与伦敦股市互联互通 ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761870.md#1">程晓容：百万港人元旦游行 2020抗共主题延续</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761310.md#1">美国专家：中国问题将成总统大选焦点</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760983.md#1">美中第二阶段贸易谈判 一个重中之重议题</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/17/n11728046.md#1">【思想领袖】专访邵岚：港警接令刺激抗议者</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759363.md#1">陈破空：四大难题无解 恐压垮习近平自身</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762363.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1154839639-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762363.md#1">武汉SARS疑云 附近居民不去市场也感染肺炎</a><br>2019年年末，湖北武汉华南海鲜市场爆 ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762556.md#1">曾去过武汉 香港女子疑染肺炎正接受隔离</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762140.md#1">元旦黑龙江佳木斯机场起火 有巨大火球升腾</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761169.md#1">武汉飞抵台湾航班 检疫人员登机检疫</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760960.md#1">重庆突发火灾 30层住宅楼从底烧到顶</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760885.md#1">武汉肺炎疫情 8人发帖遭传唤 引发网络不满</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762029.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/page-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762029.md#1">新年北京昌平强拆 百余村民上访遭威胁</a><br>2020年新年前后，天寒地冻之时，北京 ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764636.md#1">每日三退声明精选（2020/01/02）</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761858.md#1">每日三退声明精选（2020/01/01）</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761587.md#1">红歌代替儿歌 大陆幼童也要宣示效忠</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761208.md#1">中国高速省界收费站取消首日 现大堵车</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761329.md#1">大陆火车票抢票软件赛黄牛党 收费藏猫腻</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11748178.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/6160c7b0d602315646131b856d7d61e8-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11748178.md#1">【直播回放】新唐人电视台2020跨年缤纷夜</a><br>新唐人电视台特别企划《2020跨年缤纷 ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11756680.md#1">年末关门潮 山东等三省报刊明年起停刊</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11754599.md#1">曾遭男友辱骂 沈阳航空航天大学女生坠楼亡</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11754408.md#1">基因编辑婴儿 贺建奎涉非法行医获刑3年</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11749809.md#1">李荣浩叹人的坏没底线 邓紫棋用诗性歌词回应</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11749205.md#1">广州大学前院长获死刑 曾捅死同校处长夫妇</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>网闻禁闻</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11758321.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1MG8YG-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11758321.md#1">安全担忧 美陆军紧随海军禁用TikTok</a><br>抖音国际版TikTok正在引起越来越多的 ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/24/n11742493.md#1">网文：大陆汽车行业艰难的两大看点</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/24/n11742305.md#1">网文：央行钱印出来了 借钱的人没了</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/6/n11706347.md#1">反送中和六四事件 美政府应对措施对比</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/17/n11728358.md#1">港人给抗议者们写圣诞卡：以后再庆祝</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid2420.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>群体事件</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760851.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/11/mmexport1574158876716-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760851.md#1">2020全面奔小康？访民：泪奔</a><br>中共当局曾夸海口：“2020全面奔小康 ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/26/n11747752.md#1">中科大副校长被指与中共军企合作 曾遭美拒签</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/26/n11746173.md#1">浙数千学子连续维权三天 抗议学校改名换制</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/24/n11742110.md#1">发表撑港灭共言论 大陆多名公民遭刑拘</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/18/n11731023.md#1">粤村民汽油弹攻政府视频曝光 目击者描述现场</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/17/n11728981.md#1">村民疑政府易地建火葬场 茂名再爆警民冲突</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid279.md#1">更多......</a></p></td></tr>
+<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/17/n11728852.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/20191210-Yichun-American-Thought-Leaders-Joey-Siu-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/17/n11728852.md#1">【思想领袖】专访邵岚：需反共捍卫价值观</a><br>我们永远不能低估，中国共产党为了维 ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760936.md#1">大陆民众新年感谢法轮功 问候李大师</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761505.md#1">【拍案惊奇】元旦百万游行被腰斩 港警用航拍机</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/10/n11714048.md#1">60国海外法轮功学员恭祝李洪志师父新年好</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761249.md#1">港民新年诉求不变 坚持反暴政不会退缩</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761187.md#1">穿越非洲抵美 山东维权人士万里大逃亡（上）</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762321.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2015/03/1405201308251944-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762321.md#1">大陆2019年卖地金额创新高 16城市超千亿</a><br>最新的统计数据显示，大陆2019年卖地 ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761856.md#1">国企巨头爆雷：计提减值40亿 海工业务亏80亿</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761923.md#1">12月财新制造业PMI降至51.5 为3个月低位</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761801.md#1">大陆17家上市公司控制人被抓 殃及百万投资者</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/28/n11751710.md#1">【2019盘点】六大案 透视美中医疗领域新战场</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761112.md#1">川普：希望在第二阶段协议完成贸易谈判</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761830.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/b5e9fa10233d686a1935a87bba005dca-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761830.md#1">【翻墙必看】专家：习面临无解难题 应改弦易辙</a><br>大纪元每天为读者梳理翻墙必看的文章 ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762532.md#1">传中共暂停“沪伦通”计划 疑因英国挺香港</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761870.md#1">程晓容：百万港人元旦游行 2020抗共主题延续</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761310.md#1">美国专家：中国问题将成总统大选焦点</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760983.md#1">美中第二阶段贸易谈判 一个重中之重议题</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/17/n11728046.md#1">【思想领袖】专访邵岚：港警接令刺激抗议者</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762363.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1154839639-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762363.md#1">武汉SARS疑云 附近居民不去市场也感染肺炎</a><br>2019年年末，湖北武汉华南海鲜市场爆 ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762556.md#1">曾去过武汉 香港女子疑染肺炎正接受隔离</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762140.md#1">元旦黑龙江佳木斯机场起火 有巨大火球升腾</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761169.md#1">武汉飞抵台湾航班 检疫人员登机检疫</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760960.md#1">重庆突发火灾 30层住宅楼从底烧到顶</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760885.md#1">武汉肺炎疫情 8人发帖遭传唤 引发网络不满</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762029.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/page-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762029.md#1">新年北京昌平强拆 百余村民上访遭威胁</a><br>2020年新年前后，天寒地冻之时，北京 ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764636.md#1">每日三退声明精选（2020/01/02）</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761858.md#1">每日三退声明精选（2020/01/01）</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761587.md#1">红歌代替儿歌 大陆幼童也要宣示效忠</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761208.md#1">中国高速省界收费站取消首日 现大堵车</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761329.md#1">大陆火车票抢票软件赛黄牛党 收费藏猫腻</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11748178.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/6160c7b0d602315646131b856d7d61e8-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11748178.md#1">【直播回放】新唐人电视台2020跨年缤纷夜</a><br>新唐人电视台特别企划《2020跨年缤纷 ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11756680.md#1">年末关门潮 山东等三省报刊明年起停刊</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11754599.md#1">曾遭男友辱骂 沈阳航空航天大学女生坠楼亡</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11754408.md#1">基因编辑婴儿 贺建奎涉非法行医获刑3年</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11749809.md#1">李荣浩叹人的坏没底线 邓紫棋用诗性歌词回应</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11749205.md#1">广州大学前院长获死刑 曾捅死同校处长夫妇</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>网闻禁闻</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11758321.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1MG8YG-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11758321.md#1">安全担忧 美陆军紧随海军禁用TikTok</a><br>抖音国际版TikTok正在引起越来越多的 ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/24/n11742493.md#1">网文：大陆汽车行业艰难的两大看点</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/24/n11742305.md#1">网文：央行钱印出来了 借钱的人没了</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/6/n11706347.md#1">反送中和六四事件 美政府应对措施对比</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/17/n11728358.md#1">港人给抗议者们写圣诞卡：以后再庆祝</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid2420.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>群体事件</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760851.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/11/mmexport1574158876716-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760851.md#1">2020全面奔小康？访民：泪奔</a><br>中共当局曾夸海口：“2020全面奔小康 ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/26/n11747752.md#1">中科大副校长被指与中共军企合作 曾遭美拒签</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/26/n11746173.md#1">浙数千学子连续维权三天 抗议学校改名换制</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/24/n11742110.md#1">发表撑港灭共言论 大陆多名公民遭刑拘</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/18/n11731023.md#1">粤村民汽油弹攻政府视频曝光 目击者描述现场</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/17/n11728981.md#1">村民疑政府易地建火葬场 茂名再爆警民冲突</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid279.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
